// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/branch/index processBranch branch pr no rebase (dry run) 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "pr-edited",
}
`;

exports[`workers/branch/index processBranch branch pr no schedule (dry run) 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "done",
}
`;

exports[`workers/branch/index processBranch branch pr no schedule 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "done",
}
`;

exports[`workers/branch/index processBranch branch pr no schedule lockfile (dry run) 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "done",
}
`;

exports[`workers/branch/index processBranch closed pr (dry run) 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "already-existed",
}
`;

exports[`workers/branch/index processBranch continues branch if branch edited and but PR found 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "error",
}
`;

exports[`workers/branch/index processBranch does not skip branch if edited PR found with rebaseLabel 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "error",
}
`;

exports[`workers/branch/index processBranch executes post-upgrade tasks if trust is high 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "done",
}
`;

exports[`workers/branch/index processBranch executes post-upgrade tasks once when set to branch mode 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "done",
}
`;

exports[`workers/branch/index processBranch executes post-upgrade tasks with disabled post-upgrade command templating 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "done",
}
`;

exports[`workers/branch/index processBranch executes post-upgrade tasks with multiple dependecy in one branch 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "done",
}
`;

exports[`workers/branch/index processBranch handles unknown PrBlockedBy 1`] = `
Object {
  "branchExists": true,
  "prBlockedBy": "whoops",
  "result": "error",
}
`;

exports[`workers/branch/index processBranch processes branch if minimumConfidence is met 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "error",
}
`;

exports[`workers/branch/index processBranch returns if PR creation failed 1`] = `
Object {
  "branchExists": true,
  "prBlockedBy": "Error",
  "result": "error",
}
`;

exports[`workers/branch/index processBranch returns if branch automerge is pending 1`] = `
Object {
  "branchExists": true,
  "prBlockedBy": "BranchAutomerge",
  "result": "done",
}
`;

exports[`workers/branch/index processBranch returns if branch creation limit exceeded 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "branch-limit-reached",
}
`;

exports[`workers/branch/index processBranch returns if branch exists and prCreation set to approval 1`] = `
Object {
  "branchExists": true,
  "prBlockedBy": "NeedsApproval",
  "result": "needs-pr-approval",
}
`;

exports[`workers/branch/index processBranch returns if branch exists but pending 1`] = `
Object {
  "branchExists": true,
  "prBlockedBy": "AwaitingTests",
  "result": "pending",
}
`;

exports[`workers/branch/index processBranch returns if branch exists but updated 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "pending",
}
`;

exports[`workers/branch/index processBranch returns if commit limit exceeded 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "commit-limit-reached",
}
`;

exports[`workers/branch/index processBranch returns if no work 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "no-work",
}
`;

exports[`workers/branch/index processBranch returns if pending checks 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "pending",
}
`;

exports[`workers/branch/index processBranch returns if pr creation limit exceeded and branch exists 1`] = `
Object {
  "branchExists": true,
  "prBlockedBy": "RateLimited",
  "result": "pr-limit-reached",
}
`;

exports[`workers/branch/index processBranch skips branch for fresh release with stabilityDays 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "pending",
}
`;

exports[`workers/branch/index processBranch skips branch if branch edited and and PR found with sha mismatch 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "pr-edited",
}
`;

exports[`workers/branch/index processBranch skips branch if branch edited and no PR found 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "pr-edited",
}
`;

exports[`workers/branch/index processBranch skips branch if edited PR found 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "pr-edited",
}
`;

exports[`workers/branch/index processBranch skips branch if minimumConfidence not met 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "error",
}
`;

exports[`workers/branch/index processBranch skips branch if not scheduled and branch does not exist 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "not-scheduled",
}
`;

exports[`workers/branch/index processBranch skips branch if not scheduled and not updating out of schedule 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "update-not-scheduled",
}
`;

exports[`workers/branch/index processBranch skips branch if not stabilityDays not met 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "pending",
}
`;

exports[`workers/branch/index processBranch skips branch if target branch changed 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "pr-edited",
}
`;

exports[`workers/branch/index processBranch swallows branch errors 1`] = `
Object {
  "branchExists": false,
  "prNo": undefined,
  "result": "error",
}
`;

exports[`workers/branch/index processBranch swallows pr errors 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "done",
}
`;

exports[`workers/branch/index processBranch throws and swallows branch errors 1`] = `
Object {
  "branchExists": true,
  "prNo": undefined,
  "result": "pr-created",
}
`;
